--- a/index.html
+++ b/index.html
@@ -530,6 +530,9 @@
         .hover-card {
             transition: all 0.3s ease;
         }
+        .container{
+            width: 92%;
+        }
     </style>
 </head>
 <body>
