--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
                             </div>
 
                             <!-- WhatsApp Button -->
-                            <a href="https://wa.me/919341544398?text=Hi%20Yasir,%20I'm%20interested%20in%20AspiraSys." target="_blank" class="btn btn-sm w-100 mt-4 text-white fw-bold d-flex align-items-center justify-content-center" style="background-color: #25D366; border: none; box-shadow: 0 4px 6px rgba(37, 211, 102, 0.2);">
+                            <a href="https://wa.me/919345144398?text=Hi%20Yasir,%20I'm%20interested%20in%20AspiraSys." target="_blank" class="btn btn-sm w-100 mt-4 text-white fw-bold d-flex align-items-center justify-content-center" style="background-color: #25D366; border: none; box-shadow: 0 4px 6px rgba(37, 211, 102, 0.2);">
                                 <i class="fab fa-whatsapp fa-lg me-2"></i> Chat with Yasir
                             </a>
                         </div>
@@ -973,7 +973,7 @@
                             </div>
 
                             <!-- WhatsApp Button -->
-                            <a href="https://wa.me/919341544398?text=Hi%20Yasir,%20I'm%20interested%20in%20AspiraSys." target="_blank" class="btn btn-sm w-100 mt-4 text-white fw-bold d-flex align-items-center justify-content-center" style="background-color: #25D366; border: none; box-shadow: 0 4px 6px rgba(37, 211, 102, 0.2);">
+                            <a href="https://wa.me/919629446786?text=Hi%20Yasir,%20I'm%20interested%20in%20AspiraSys." target="_blank" class="btn btn-sm w-100 mt-4 text-white fw-bold d-flex align-items-center justify-content-center" style="background-color: #25D366; border: none; box-shadow: 0 4px 6px rgba(37, 211, 102, 0.2);">
                                 <i class="fab fa-whatsapp fa-lg me-2"></i> Chat with Yasir
                             </a>
                         </div>
@@ -1656,7 +1656,7 @@
         <div class="form-container">
             <div class="form-header position-relative overflow-hidden">
                 <h2 class="fw-bold position-relative z-1">Start Your Journey</h2>
-                <p class="m-0 position-relative z-1 text-white-50">Join the next cohort of innovators.</p>
+                <p class="m-0 position-relative z-1 text-white-50">Join the next aspirants of innovators.</p>
                 <svg class="position-absolute bottom-0 start-0 w-100" viewBox="0 0 100 100" preserveAspectRatio="none" style="height:50px; opacity:0.1;">
                     <path d="M0 100 C 20 0 50 0 100 100 Z" fill="white"></path>
                 </svg>
@@ -1693,7 +1693,7 @@
                         <label class="form-label fw-bold small">Phone Number</label>
                         <div class="input-group">
                             <span class="input-group-text"><i class="fas fa-phone text-secondary"></i></span>
-                            <input type="tel" class="form-control" name="user_phone" required placeholder="+91 93415 44398">
+                            <input type="tel" class="form-control" name="user_phone" required placeholder="+91 9876543210">
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -1736,7 +1736,7 @@
                     <div class="col-12 mt-4">
                         <!-- Updated Button Text with Gmail -->
                         <button type="submit" id="submitBtn" class="btn btn-orange w-100 py-3 fw-bold shadow">
-                            <span id="submitText">Submit to mdmuzamil0311@gmail.com <i class="fas fa-paper-plane ms-2"></i></span>
+                            <span id="submitText">Submit The Application<i class="fas fa-paper-plane ms-2"></i></span>
                             <span id="submitLoader" class="d-none"><i class="fas fa-circle-notch fa-spin me-2"></i> Submitting...</span>
                         </button>
                     </div>
@@ -1785,7 +1785,7 @@
                     <h6 class="text-uppercase mb-4 fw-bold text-warning">Contact</h6>
                     <p class="text-white-50 small"><i class="fas fa-home me-2"></i> Anaikar Complex, Periamet, Chennai, Tamil Nadu - 600003</p>
                     <p class="text-white-50 small"><i class="fas fa-envelope me-2"></i> mdmuzamil0311@gmail.com</p>
-                    <p class="text-white-50 small"><i class="fas fa-phone me-2"></i> +91 93415 44398</p>
+                    <p class="text-white-50 small"><i class="fas fa-phone me-2"></i> +91 9876543210</p>
                 </div>
             </div>
 
